--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,7 @@
     -->
     <title>React App</title>
   </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+  <body style="background-image: url('./pattern.jpg'); height:100%">
     <div id="root"></div>
     <!--
       This HTML file is a template.
